provisioning/remla-istio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  selector:
    app: app-frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port: '3000'
      prometheus.io/path: '/api/metrics'
spec:
  selector:
      app: app-service
  ports:
      - port: 3000
        targetPort: 3000
        nodePort: 30003
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
    selector:
        app: model-service
    ports:
        - port: 5000
          targetPort: 5000
          nodePort: 30004
    type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: istio-system
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
