provisioning/remla-istio/templates/destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-frontend-destination
spec:
  host: app-frontend
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-service-destination
spec:
    host: app-service
    trafficPolicy:
        tls:
            mode: DISABLE
---
