provisioning/remla-istio/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: "/app"
      route:
        - destination:
            host: app-frontend
            subset: v1
          weight: 80
        - destination:
            host: app-frontend
            subset: v2
          weight: 20
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: app-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: "/model"
      route:
        - destination:
            host: model-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: "/metrics"
      route:
        - destination:
            host: prometheus-server
            port:
              number: 80

    - match:
        - uri:
            prefix: "/grafana"
      route:
        - destination:
            host: grafana
            port:
              number: 3000
